alterações no projeto

--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "description": "Meu portfolio",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kyle Mathews <lucasg_f@outlook.com>",
   "dependencies": {
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.241",
+    "gatsby-cli": "^1.1.50",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-catch-links": "^1.0.19",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-react-helmet": "^2.0.9",
     "gatsby-plugin-sass": "^1.0.25",
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.39",
     "github-markdown-css": "^2.10.0",
+    "netlify-cms": "^1.6.0",
     "react-helmet": "^5.2.0",
     "react-materialize": "^2.1.2",
     "react-plx": "^1.1.1",
