--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-filesystem": "^1.5.33",
     "gatsby-transformer-remark": "^1.7.39",
     "github-markdown-css": "^2.10.0",
+    "material-icons": "^0.2.1",
     "netlify-cms": "^1.6.0",
     "react-helmet": "^5.2.0",
     "react-materialize": "^2.1.2",
