--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "material-icons": "^0.2.1",
     "netlify-cms": "^1.6.0",
     "react-helmet": "^5.2.0",
+    "react-lazy-hero": "^0.4.0",
     "react-materialize": "^2.1.2",
     "react-plx": "^1.1.1",
     "react-scrollable-anchor": "^0.6.1",
+    "react-springy-parallax": "^1.3.0",
     "react-typist": "^2.0.4"
   },
   "keywords": [
